# 2DPhysicsEngine

./: CMakeLists.txt  README.md  vcpkg.json
2DPhysicsEngine/include/: CircleCollider.h  CircleShape.h  Collider.h  Collisions.h  ConvexShape.h  Entity.h  MathUtils.h  Matrix.h  PhysicShape.h  PhysicalWorld.h  PhysicsConstant.h  PolygonShape.h  RegionNode.h  Rigibody.h  Vector.h  Vector2D.h
2DPhysicsEngine/src/: CircleShape.cpp  Collider.cpp  Collisions.cpp  ConvexShape.cpp  Entity.cpp  MathUtils.cpp  Matrix.cpp  PhysicalWorld.cpp  PolygonShape.cpp  RegionNode.cpp  Rigibody.cpp  SFMLUtils.cpp  Vector.cpp  Vector2D.cpp  main.cpp
Implementation/: CMakeLists.txt
Implementation/include/: Entity.h  SFMLUtils.h  World.h
Implementation/src/: Entity.cpp  SFMLUtils.cpp  World.cpp  main.cpp
Sfml/src/: main.cpp
Vector/include/: Vector.h
Vector/src/: Vector.cpp  main.cpp
